# ffmpeg-converter

./: .gitignore  CMakeLists.txt  INSTALL_BUILD_ALL_PLATFORMS.md  LICENSE  PROJECT_DESCRIPTION.md  PROJECT_OVERVIEW_DETAILED.md  README.md  WINDOWS_BRANCH.md  mux_apple_m4v.sh  mux_apple_mp4.sh  pascal_deeloper_description.md
.github/workflows/: macos.yml  windows-msys2.yml
docs/: install-linux.md  install-macos.md  install-windows.md
fpc/: .gitignore  DESCRIPTION.md  FIX_PLAN_AUDIO_NORM_AND_CHAPTERS.md  OPTIMIZATION_AUDIT.md  README.md  REFACTORING_PLAN.md  REVIEW_REPORT.md
fpc/cli/: README.md  cli_args.pas  cli_callbacks.pas  cli_menu.pas  cli_progress.pas  ffmpeg_converter.lpr
fpc/common/: README.md  fs_utils.pas  path_utils.pas  process_utils.pas  time_utils.pas
fpc/converter/: API_MAP.md  CONVERTER_LIBRARY_DETAIL.md  README.md  apple_m4v_creator.pas  converter_analysis.pas  converter_api_c.pas  converter_cmd_builder.pas  converter_core.pas  converter_pas.h  converter_pas.lpr  converter_runner.pas  converter_types.pas
fpc/gui/: form.lfm  form.lpi  form.lpr  form.lps  form.pas  main.lpr
fpc/gui/backup/: form.lfm  form.lpi  form.lps  form.pas
fpc/json/: README.md  loudnorm_json.pas
fpc/test/: README.md  check_gui_cli_issues.sh  run_apple_m4v_test.pas  test_cli_args_matrix.sh  test_cli_mode_matrix.pas  test_cmd_builder.pas  test_path_parse.pas
src/: CHANGELOG.md  CMakeLists.txt  README.md  ffmpeg_convert.glade
src/audio/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/linux/: main.c  main.c.txt
src/cli/macos/: main.c
src/converter/: CMakeLists.txt  LIBRARY API SPECIFICATION.md  converter.c  converter.h
src/core/: CMakeLists.txt  dummy.c
src/ffmpeg_cmd/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui_callbacks.c  gui_callbacks.h  gui_main.c  gui_window.c  gui_window.h
src/platform/: CMakeLists.txt  dummy.c
src/platform/linux/: progress.c
src/platform/windows/: progress.c
src/progress/: CMakeLists.txt  progress.h
src/utils/: CMakeLists.txt
src/video/: CMakeLists.txt
